# example-repo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: run_test.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: run_test.yml
src/example_repo/: mod1.py
src/exmaple_repo/: mod1.py
tests/: test_mod1.py
