[project]
name = "exmaple-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Ignacio Castillo",email = "ignacio.bcastillo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "exmaple_repo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.10.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
